--- a/branches/slurm-0-2-branch/doc/man/man1/sinfo.1
+++ b/branches/slurm-0-2-branch/doc/man/man1/sinfo.1
@@ -1,7 +1,7 @@
 .TH SINFO "1" "February 2004" "sinfo 0.2" "Slurm components"
 
 .SH "NAME"
-sinfo \- Used to view information about Slurm nodes and partitions.
+sinfo \- view information about SLURM nodes and partitions.
 
 .SH "SYNOPSIS"
 \fBsinfo\fR [\fIOPTIONS\fR...] 
@@ -17,12 +17,15 @@ Print a message describing all \fBsinfo\fR options.
 \fB\-\-usage\fR
 Print a brief message listing the \fBsinfo\fR options.
 .TP
+\fB\-d\fR, \fB\-\-dead\fR
+If set only report state information for non-responding (dead) nodes.
+.TP
 \fB\-e\fR, \fB\-\-exact\fR
-If set, do not group node information on multiple nodes unless their 
-configurations to be reported are identical. Otherwise cpu count, 
-memory size, and disk space for nodes will be listed with the minimum 
-value followed by a "+" for nodes with the same partition and state 
-(e.g., "250+").
+If set, do not group node information on multiple nodes unless
+their configurations to be reported are identical. Otherwise
+cpu count, memory size, and disk space for nodes will be listed
+with the minimum value followed by a "+" for nodes with the
+same partition and state (e.g., "250+").
 .TP
 \fB\-h\fR, \fB\-\-noheader\fR
 Do not print a header on the output.
@@ -38,9 +41,8 @@ This is ignored if the \fB\-\-format\fR option is specified.
 \fB\-n <nodes>\fR , \fB\-\-nodes=<nodes>\fR
 Print information only about the specified node(s). 
 Multiple nodes may be comma separated or expressed using a 
-node range expression.
-For example "linux[00-07]" would indicate eight nodes, "linux00" 
-through "linux07".
+node range expression. For example "linux[00-07]" would 
+indicate eight nodes, "linux00" through "linux07."
 .TP
 \fB\-N\fR , \fB\-\-Node\fR
 Print information in a node-oriented format.
@@ -48,66 +50,118 @@ The default is to print information in a partition-oriented format.
 This is ignored if the \fB\-\-format\fR option is specified.
 .TP
 \fB\-o <output_format>\fR, \fB\-\-format=<output_format>\fR
-Specify the information to be displayed.  
-The default format is "%9P %5a %.9l %.5D %6t %N".
-If the \fB\-\-summarize\fR option is specified, the default 
-format is "%9P %5a %.9l %15F %N".
-If the \fB\-\-long\fR option is specified, the default format is 
-"%9P %5a %.9l %.8s %4r %5h %10g %.5D %11T %N". 
-If the \fB\-\-Node\fR option is specified, the default format is 
-"%#N %.5D %9P %6t". 
-If the \fB\-\-Node\fR and \fB\-\-long\fR options are both specified, 
-the default format is "%#N %.5D %9P %11T %.4c %.6m %.8d %.6w %8f %R".
-In the above two formats the value of "#" represents the maximum 
-length of an node list to be printed.
+Specify the information to be displayed using an \fBsinfo\fR
+format string. Format strings transparently used by \fBsinfo\fR
+when running with various options are
+.RS
+.TP 6
+.I "default"
+"%9P %5a %.9l %.5D %6t %N"
+.TP 
+.I "--summarize"
+"%9P %5a %.9l %15F %N"
+.TP 
+.I "--long"
+"%9P %5a %.9l %.8s %4r %5h %10g %.5D %11T %N"
+.TP
+.I "--Node"
+"%#N %.5D %9P %6t"
+.TP
+.I "--long --Node"
+"%#N %.5D %9P %11T %.4c %.6m %.8d %.6w %8f %R"
+.TP
+.I "--list-reasons"
+"%35R %N"
+.RE
+
+In the above format strings the use of "#" represents the
+maximum length of an node list to be printed.
 
 The field specifications available include: 
-.br
-\fB%a\fR State/availability of a partition
-.br
-\fB%A\fR Number of nodes by state in the format "allocated/idle". 
-Do not use this with a node state option ("%t" or "%T") or 
+.RS
+.TP 4
+\fB%a\fR 
+State/availability of a partition
+.TP
+\fB%A\fR 
+Number of nodes by state in the format "allocated/idle".
+Do not use this with a node state option ("%t" or "%T") or
 the different node states will be placed on separate lines.
-.br
-\fB%c\fR Number of CPUs per node
-.br
-\fB%d\fR Size of temporary disk space per node in megabytes
-.br
-\fB%D\fR Number of nodes
-.br
-\fB%f\fR Features associated with the nodes
-.br
-\fB%F\fR Number of nodes by state in the format "allocated/idle/other/total". 
-Do not use this with a node state option ("%t" or "%T") or 
-the different node states will be placed on separate lines.
-.br
-\fB%g\fR Groups which may use the nodes
-.br
-\fB%h\fR Jobs may share nodes, "yes", "no", or "force"
-.br
-\fB%l\fR Maximum time for any job in the format "days:hours:minutes:seconds"
-.br
-\fB%m\fR Size of memory per node in megabytes
-.br
-\fB%N\fR List of node names
-.br
-\fB%P\fR Partition name
-.br
-\fB%r\fR Only user root may initiate jobs, "yes" or "no"
-.br
-\fB%R\fR The reason a node is unavailable (down, drained, or draining states)
-.br
-\fB%s\fR Maximum job size in nodes
-.br
-\fB%t\fR State of nodes, compact form
-.br
-\fB%T\fR State of nodes, extended form
-.br
-\fB%w\fR Scheduling weight of the nodes
-.br
-\fB%.<*>\fR right justification of the field
-.br 
-\fB%<Number><*>\fR size of field
+.TP
+\fB%c\fR 
+Number of CPUs per node
+.TP
+\fB%d\fR 
+Size of temporary disk space per node in megabytes
+.TP
+\fB%D\fR 
+Number of nodes
+.TP
+\fB%f\fR 
+Features associated with the nodes
+.TP
+\fB%F\fR 
+Number of nodes by state in the format
+"allocated/idle/other/total".  Do not use this with a node
+state option ("%t" or "%T") or the different node states will
+be placed on separate lines.
+.TP
+\fB%g\fR 
+Groups which may use the nodes
+.TP
+\fB%h\fR 
+Jobs may share nodes, "yes", "no", or "force"
+.TP
+\fB%l\fR 
+Maximum time for any job in the format "days:hours:minutes:seconds"
+.TP
+\fB%m\fR 
+Size of memory per node in megabytes
+.TP
+\fB%N\fR 
+List of node names
+.TP
+\fB%P\fR 
+Partition name
+.TP
+\fB%r\fR 
+Only user root may initiate jobs, "yes" or "no"
+.TP
+\fB%R\fR 
+The reason a node is unavailable (down, drained, or draining states)
+.TP
+\fB%s\fR 
+Maximum job size in nodes
+.TP
+\fB%t\fR 
+State of nodes, compact form
+.TP
+\fB%T\fR 
+State of nodes, extended form
+.TP
+\fB%w\fR 
+Scheduling weight of the nodes
+.TP
+\fB%.<*>\fR 
+right justification of the field
+.TP
+\fB%<Number><*>\fR 
+size of field
+.RE
+.TP
+\fB\-r\fR, \fB\-\-responding\fR
+If set only report state information for responding nodes.
+.TP
+\fB\-R\fR, \fB--list-reasons\fR
+List reasons nodes are down or drained. When nodes are in
+these states SLURM supports optional inclusion of a "reason"
+string by an administrator. This option will display the first
+35 characters of the reason field and list of nodes with that
+reason for all nodes that are, by default, down, drained, or
+draining. This option may be used with other node filtering
+options (e.g. \fB\-r\fR, \fB\-d\fR, \fB\-t\fR, \fB\-n\fR),
+however, combinations of these options that result in a list of
+nodes that are not down or drained will not produce any output.
 .TP
 \fB\-s\fR , \fB\-\-summarize\fR
 List only a partition state summary with no node state details.
@@ -135,9 +189,11 @@ insensitive.
 Possible values include: ALLOC, ALLOCATED, COMP, 
 COMPLETING, DOWN, DRAIN, DRAINED, DRAINING, IDLE, UNK, and UNKNOWN.
 A "*" suffix may be appended to any of these states to search for 
-nodes in the specified state which are not responding. 
+nodes in the specified state which are not responding.
 By default nodes in the specified state are reported whether they are 
 responding or not.
+Also note the \fB\-\-dead\fR and \fB\-\-responding\fR options for
+filtering nodes by state.
 .TP
 \fB\-p <partition>\fR, \fB\-\-partition=<partition>\fR
 Print information only about the specified partition.  
@@ -148,27 +204,29 @@ Provide detailed event logging through program execution.
 \fB\-V\fR , \fB\-\-version\fR
 Print version information and exit.
 
-.SH "OUTPUT"
+.SH "OUTPUT FIELD DESCRIPTIONS"
 .TP
 \fBAVAIL\fR
-Partition state, \fBup\fR or \fBdown\fR.
+Partition state: \fBup\fR or \fBdown\fR.
 .TP
 \fBCPUS\fR
 Count of CPUs (processors) on these nodes.
 .TP
 \fBGROUPS\fR
-Resource allocations in this partition are restricted to the named groups.
-\fBall\fR indicates that all groups may use this partition.
+Resource allocations in this partition are restricted to the
+named groups.  \fBall\fR indicates that all groups may use
+this partition.
 .TP
 \fBJOB_SIZE\fR
-Minimum and maximum node count that can be allocated to any user job. 
-A single number indicates the minimum and maximum node count are the 
-same.
-\fBinfinite\fR is used to identify partitions without a maximum node count.
+Minimum and maximum node count that can be allocated to any
+user job.  A single number indicates the minimum and maximum
+node count are the same.  \fBinfinite\fR is used to identify
+partitions without a maximum node count.
 .TP
 \fBTIMELIMIT\fR
-Maximum time limit for any user job in days:hours:minutes:seconds.
-\fBinfinite\fR is used to identify partitions without a job time limit.
+Maximum time limit for any user job in
+days:hours:minutes:seconds.  \fBinfinite\fR is used to identify
+partitions without a job time limit.
 .TP
 \fBMEMORY\fR
 Size of real memory in megabytes on these nodes.
@@ -180,7 +238,7 @@ Names of nodes associated with this configuration/partition.
 Count of nodes with this particular configuration.
 .TP
 \fBNODES(A/I)\fR
-Count of nodes with this particular configuration by node 
+Count of nodes with this particular configuration by node
 state in the form "available/idle".
 .TP
 \fBNODES(A/I/O/T)\fR
@@ -273,80 +331,66 @@ SINFO_SORT
 .SH "EXAMPLES"
 .eo
 Report basic node and partition configurations:
-.br
+
+.nf
+
 > sinfo
-.br
 PARTITION AVAIL TIMELIMIT NODES STATE  NODELIST
-.br
 batch     up     infinite     2 alloc  adev[8-9]
-.br
 batch     up     infinite     6 idle   adev[10-15]
-.br
 debug*    up        30:00     8 idle   adev[0-7]
-.br
+
+.fi
  
-.br
 Report partition summary information:
-.br
+.nf
+
 > sinfo -s
-.br
 PARTITION AVAIL TIMELIMIT NODES(A/I/O/T) NODELIST
-.br
 batch     up     infinite 2/6/0/8        adev[8-15]
-.br
 debug*    up        30:00 0/8/0/8        adev[0-7]
-.br
+
+.fi
  
-.br
 Report more complete information about the partition debug:
-.br
+.nf
+
 > sinfo --long --partition=debug
-.br
 PARTITION AVAIL TIMELIMIT JOB_SIZE ROOT SHARE GROUPS NODES STATE NODELIST
-.br
 debug*    up        30:00        8 no   no    all        8 idle  dev[0-7]
-.br
+.fi
 
-.br
 Report only those nodes that are in state DRAINED:
-.br
+.nf
+
 > sinfo --states=drained
-.br
 PARTITION AVAIL NODES TIMELIMIT STATE  NODELIST
-.br
 debug*    up        2     30:00 drain  adev[6-7]
-.br
 
-.br
+.fi
+
 Report node-oriented information with details and exact matches:
-.br
-> sinfo -Nel
-.br
-NODELIST    NODES PARTITION STATE  CPUS MEMORY TMP_DISK WEIGHT FEATURES REASON
-.br
-adev[0-1]       2 debug*    idle      2   3448    38536     16 (null)   (null)
-.br
-adev[2,4-7]     5 debug*    idle      2   3384    38536     16 (null)   (null)
-.br
-adev3           1 debug*    idle      2   3394    38536     16 (null)   (null)
-.br
-adev[8-9]       2 batch     allocated 2    246    82306     16 (null)   (null)
-.br
-adev[10-15]     6 batch     idle      2    246    82306     16 (null)   (null)
-.br
+.nf
 
-.br
+> sinfo -Nel
+NODELIST    NODES PARTITION STATE  CPUS MEMORY TMP_DISK WEIGHT FEATURES REASON
+adev[0-1]       2 debug*    idle      2   3448    38536     16 (null)   (null)
+adev[2,4-7]     5 debug*    idle      2   3384    38536     16 (null)   (null)
+adev3           1 debug*    idle      2   3394    38536     16 (null)   (null)
+adev[8-9]       2 batch     allocated 2    246    82306     16 (null)   (null)
+adev[10-15]     6 batch     idle      2    246    82306     16 (null)   (null)
+
+.fi
+
 Report only down, drained and draining nodes and their reason field:
-.br
-> sinfo --states=down,drained,draining --sort=N --format="%12N %9T %R"
-.br
-NODELIST     STATE     REASON
-.br
-dev[12,18]   DRAINED   power supply, ETA Dec25
-.br
-dev45        DOWN*     (null)
-.br
-dev123       DRAINED   memory, ETA Nov24
+.nf
+
+> sinfo -R
+REASON                              NODELIST
+Memory errors                       dev[0,5]
+Not Responding                      dev8
+
+.fi
 .ec
 
 .SH "COPYING"
